--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "chart.js": "^2.7.2",
-    "cordova-android": "7.0.0",
-    "cordova-ios": "4.5.4",
+    "cordova-android": "7.1.1",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -45,7 +45,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "^3.2.0",
     "typescript": "~2.6.2"
   },
   "description": "Proyecto de Ionic para seguimiento de la inversion en la RACCS, Nicaragua.",
@@ -59,8 +59,8 @@
       "cordova-plugin-firebase": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
